Filter_Drawer_US11: Collapse/Elapse a category when making a group by and Fix BUG Apply Filter choices of Filter tab (#380)

--- a/task-management/src/main/webapp/skin/css/tasks.less
+++ b/task-management/src/main/webapp/skin/css/tasks.less
@@ -250,11 +250,43 @@
       .nameGroup {
         font-size: 18px;
         font-weight: normal;
-        margin-left: 25px;
         margin-right: 8px;
+      }
+      hr.my-0.v-divider.theme--light {
+         margin-left: 20px;
+         margin-right: 25px;
+         border-top-width: 1px;
+         padding-block-end: 20px;
+       }
+      i.uiIcon.uiIconMiniArrowDown,i.uiIcon.uiIconMiniArrowRight{
+        margin-right: 8px;
+      }
+      .uiIconMiniArrowDown:before,.uiIconMiniArrowRight:before{
+        color:DarkGrey;
+      }
+      a.toggle-collapse-group {
+        border-right: 1px solid DarkGrey;
+        height: 20px;
       }
       .assigneeFilter{
         margin-left: 25px;
+        margin-block-end: 5px;
+        .defaultAvatar
+        img {
+          height: 26px;
+          min-width: 26px;
+          width: 26px;
+          align-items: center;
+          border-radius: 50%;
+          display: inline-flex;
+          justify-content: center;
+          line-height: normal;
+          position: relative;
+          text-align: center;
+          vertical-align: middle;
+          overflow: hidden;
+          margin-right: 8px;
+        }
         .text-truncate{
           font-size: 18px!important;
         }
